Fixed issue with login box not showing

--- a/client/views/sidebar/authentication/sidebar.auth.less
+++ b/client/views/sidebar/authentication/sidebar.auth.less
@@ -73,7 +73,7 @@
         border-radius: 10px;
         border-width: 3px;
         border-color: #fff;
-        margin-left: -19.4em;
+        margin-left: 14.3em;
         margin-top: 6em;
         z-index: 10;
 
@@ -81,25 +81,25 @@
             content: ' ';
             position: absolute;
             border: 30px solid transparent;
-            top: 1.6em;
+            top: 2.6em;
         }
 
         &:before {
             border-right-color: #fff;
-            left: 8.1em; //9.6%;
+            left: 10.6em;
             z-index: 9;
         }
 
         &:after {
             border-right-color: @sidebar-background;
-            left: 8.35em; 
+            left: 10.85em; 
             z-index: 11;
         }
     }
 
     &.register {
         &:before, &:after {
-            top: 9em;
+            top: 10em;
         }
 
         height: 30em;
